[package]
name = "beam_bvm_interface"
version = "{VERSION}"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/NewDark90/beam-bvm-interface"
readme = "README.md"
description = """
A direct interface to the Beam Virtual Machine functions and data structures 
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]